# introspection

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
introspection/: Cargo.toml
introspection-derive/: Cargo.toml
introspection-derive/src/: lib.rs
introspection-derive/tests/: static.rs
introspection/src/: lib.rs
src/: main.rs
tests/: dynamic.rs  into.rs  static.rs
