[package]
name = "introspection"
version = "0.1.1"
authors = ["Victor Polevoy <fx@thefx.co>"]

license = "MIT"
description = "A rust introspection procedural macro."
keywords = ["introspection"]

repository = "https://github.com/vityafx/introspection"

[dependencies]
syn = "0.11"
quote = "0.3"
serde = { version = "1", optional = true }
serde_derive = { version = "1", optional = true }
serde_json = { version = "1", optional = true }

[features]
# no features by default
default = []
serde_support = ["serde", "serde_derive", "serde_json"]
